--- a/angu-boot-master/application/banner-details-mapview/views/bannerDetails.html
+++ b/angu-boot-master/application/banner-details-mapview/views/bannerDetails.html
@@ -31,9 +31,9 @@
 
                 <div class="col-sm-6" style="padding-top: 10px">
                     <div style="text-align: center">
-                        <div style="float: left"> 1200</div>
+                        <div style="float: left"> Rs. 1200</div>
                         Price Range
-                        <div style="float: right"> 9800</div>
+                        <div style="float: right"> Rs. 9800</div>
                     </div>
 
                     <input id="ex1" style="width: 100%" data-slider-id='ex1Slider' type="text" data-slider-min="1200"
